added hooks and api helper

--- a/APIAutomation.csproj
+++ b/APIAutomation.csproj
@@ -17,7 +17,8 @@
 
   <ItemGroup>
     <Folder Include="Drivers\" />
-    <Folder Include="Support\" />
+    <Folder Include="ModelDTOs\" />
+    <Folder Include="TestData\Payloads\" />
   </ItemGroup>
 
 </Project>
